# scientific-memory

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JUSTFILE  LICENSE  README.md  ROADMAP.md  SECURITY.md  lake-manifest.json  lakefile.toml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
kernels/adsorption/: pyproject.toml
kernels/adsorption/examples/: README.md  run_adsorption_sweep_demo.py  run_freundlich_demo.py  run_langmuir_demo.py
kernels/adsorption/src/adsorption_kernel/: __init__.py  cli.py  model.py  schema.py
kernels/adsorption/tests/: test_freundlich_kernel.py  test_langmuir_kernel.py
kernels/conformance/: README.md  pyproject.toml
kernels/conformance/src/kernel_conformance/: __init__.py
pipeline/: pyproject.toml
pipeline/src/sm_pipeline/: __init__.py  benchmark_runner.py  mcp_server.py  pipeline_orchestrator.py  settings.py
pipeline/tests/: test_batch_admit.py  test_benchmark_runner.py  test_canonical_publish.py  test_chem_dilution_corpus_depth.py  test_coverage_metrics.py  test_diff_assumption_drift.py  test_extraction_artifacts.py  test_gate_engine.py  test_gold_scorer.py  test_graph_integrity.py  test_ingest_automation.py  test_kernel_witness.py  test_lean_deps.py  test_llm_eval_harness.py  test_llm_lean_proposals.py  test_llm_proposals.py  test_mapping_generation.py  test_mcp_server_contract.py  test_mcp_server_data_paths.py  test_mcp_server_integration.py  test_migration_doc.py  test_normalization.py  test_normalization_policy.py  test_pipeline_orchestrator.py  test_pipeline_orchestrator_registry.py  test_portal_read_model.py  test_proof_repair_apply.py  test_proof_repair_interface.py  test_provenance_rules.py  test_research_value_disputed.py  test_reviewer_workflow.py  test_schema_validation.py  test_source_span_alignment.py  test_theorem_card_reviewer.py  test_trust_hardening_extraction_normalize.py  test_trust_hardening_integration_gates.py  test_trust_hardening_publish_hash.py
(+375 files in other folders)
