[project]
name = "scientific-memory-root"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pytest>=8.0"]

[tool.uv.workspace]
members = ["pipeline", "kernels/adsorption", "kernels/conformance"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["pipeline/tests", "kernels/adsorption/tests"]
