[project]
name = "sm-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "jsonschema>=4.23",
  "referencing>=0.35",
  "typer>=0.12",
  "rich>=15.0.0",
  "networkx>=3.3",
  "httpx>=0.27",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
sm-pipeline = "sm_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sm_pipeline"]

[tool.ruff]
line-length = 100
