[project]
name = "adsorption-kernel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "hypothesis>=6.152.1",
  "kernel-conformance",
  "pydantic>=2.8",
  "pytest>=8.0",
]

[tool.uv.sources]
kernel-conformance = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adsorption_kernel"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["tests"]
