[project]
name = "kernel-conformance"
version = "0.1.0"
description = "Shared numeric and property-test helpers for Scientific Memory executable kernels (domain-agnostic)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernel_conformance"]

[tool.ruff]
line-length = 100
target-version = "py311"
